<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dear List</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_new">Add New Item</string>
    <string name="search">&#160;Search</string>
    <string name="hint_title">Please input a title</string>
    <string name="hint_shortcut">Please input a shortcut</string>
    <string name="hint_content">Say something</string>
    <string name="save_alarm">Save Alarm</string>
    <string name="title_activity_alarm_message">AlarmMessage</string>
    <string name="action_photo">Take a picture</string>
    <string name="action_weather">See weather</string>
    <string name="pause_alarm">Pause Alarm</string>
    <string name="resume_alarm">Resume Alarm</string>
    <string name="toggle_on">ON</string>
    <string name="toggle_off">OFF</string>
    <string name="day0">Sunday</string>
    <string name="day1">Monday</string>
    <string name="day2">Tuesday</string>
    <string name="day3">Wednesday</string>
    <string name="day4">Thursday</string>
    <string name="day5">Friday</string>
    <string name="day6">Saturday</string>
    
    <string name="action_alarm">Alarm</string>
    
    <string name="action_cont_del">Delete</string>
    
    <string name="write_first">Please write something first</string>
    <string name="may_add_one">You may add an alarm</string>
    

</resources>