<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:hint="@string/hint_title"
        android:layout_height="wrap_content" 
        android:visibility="gone"/>

    <EditText
        android:id="@+id/et_shortcut"
        android:hint="@string/hint_shortcut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_title" 
        android:visibility="gone"/>

    <EditText
        android:id="@+id/et_content"
        android:hint="@string/hint_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textMultiLine"
        android:background="@null"
        android:gravity="top"
        android:layout_below="@id/et_shortcut" />

</RelativeLayout>