<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <DatePicker 
        android:id="@+id/dpPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <TimePicker
        android:id="@+id/tpPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </TimePicker>

    <Button
        android:id="@+id/btnSaveAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:text="@string/save_alarm">
    </Button>
    
    <Button
        android:id="@+id/btnPauseAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:text="@string/pause_alarm"
        android:visibility="gone">
    </Button>
      
    <Button
        android:id="@+id/btnResumeAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:text="@string/resume_alarm"
        android:visibility="gone">
    </Button>

</LinearLayout>